--- a/ScrumUI/Web.config
+++ b/ScrumUI/Web.config
@@ -9,8 +9,12 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=5.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <connectionStrings>
+    <!--<add name="DefaultConnection" connectionString="Data Source=(LocalDb)\v11.0;Initial Catalog=aspnet-ScrumUI-20131202093507;Integrated Security=SSPI;AttachDBFilename=|DataDirectory|\aspnet-ScrumUI-20131202093507.mdf" providerName="System.Data.SqlClient" />-->
+    <!--<add name="DefaultConnection" connectionString="Data Source=.\SQLEXPRESS;AttachDbFilename=|DataDirectory|\aspnet-ScrumUI-20131202093507.mdf;Initial Catalog=aspnet-ScrumUI-20131202093507;Integrated Security=True;User Instance=True" providerName="System.Data.SqlClient" />-->
+   <!--<add name="ScrumContext" connectionString="metadata=res://*/ScrumEntities.csdl|res://*/ScrumEntities.ssdl|res://*/ScrumEntities.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=.\SQLEXPRESS;initial catalog=Scrum;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />-->
     <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\v11.0;Initial Catalog=aspnet-ScrumUI-20131202093507;Integrated Security=SSPI;AttachDBFilename=|DataDirectory|\aspnet-ScrumUI-20131202093507.mdf" providerName="System.Data.SqlClient" />
     <add name="ScrumContext" connectionString="metadata=res://*/ScrumEntities.csdl|res://*/ScrumEntities.ssdl|res://*/ScrumEntities.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=.\SQLEXPRESS;initial catalog=Scrum;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="2.0.0.0" />
@@ -26,9 +30,9 @@
       </assemblies>
     </compilation>
     <httpRuntime targetFramework="4.5" />
-    <authentication mode="Forms">
+    <!--<authentication mode="Forms">
       <forms loginUrl="~/Account/Login" timeout="2880" />
-    </authentication>
+    </authentication>-->
     <pages>
       <namespaces>
         <add namespace="System.Web.Helpers" />
