--- a/ScrumUI/Web.config
+++ b/ScrumUI/Web.config
@@ -13,8 +13,7 @@
     <!--<add name="DefaultConnection" connectionString="Data Source=.\SQLEXPRESS;AttachDbFilename=|DataDirectory|\aspnet-ScrumUI-20131202093507.mdf;Initial Catalog=aspnet-ScrumUI-20131202093507;Integrated Security=True;User Instance=True" providerName="System.Data.SqlClient" />-->
    <!--<add name="ScrumContext" connectionString="metadata=res://*/ScrumEntities.csdl|res://*/ScrumEntities.ssdl|res://*/ScrumEntities.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=.\SQLEXPRESS;initial catalog=Scrum;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />-->
     <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\v11.0;Initial Catalog=aspnet-ScrumUI-20131202093507;Integrated Security=SSPI;AttachDBFilename=|DataDirectory|\aspnet-ScrumUI-20131202093507.mdf" providerName="System.Data.SqlClient" />
-
-  <add name="ScrumContext" connectionString="metadata=res://*/ScrumEntities.csdl|res://*/ScrumEntities.ssdl|res://*/ScrumEntities.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=P5RO-PC257\SQLEXPRESS;initial catalog=Scrum;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" /></connectionStrings>
+<add name="ScrumContext" connectionString="metadata=res://*/ScrumEntities.csdl|res://*/ScrumEntities.ssdl|res://*/ScrumEntities.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=.\SQLEXPRESS;initial catalog=Scrum;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" /></connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="2.0.0.0" />
     <add key="webpages:Enabled" value="false" />
